<resources>
    <string name="app_name">Food Truck Manager</string>
    <string name="action_settings">Settings</string>
    <string name="newitemname_hint">Item Name</string>
    <string name="newitem_button">Add To Menu</string>
    <string name="newitemprice_hint">Item Price</string>
    <string name="newsupply_hint">Supply Name</string>
    <string name="newsupplycount_hint">Supply Amount</string>
    <string name="newsupply_button">Add Supply</string>
    <string name="newequipment_hint">Equipment Name</string>
    <string name="newequipmentcount_hint">Equipment Amount</string>
    <string name="newequipment_button">Add Equipment</string>
    <string name="supplycount_button">Change Amount</string>
    <string name="equipmentcount_button">Change Amount</string>
    <string name="maintitle">Main Menu</string>
    <string name="maintext">Welcome to the GRUBBR Food Truck Management service ! Above, you will find tabs related to different aspects of the management of your food truck.</string>
    <string name="employeetitle">Employee Schedules</string>
    <string name="shifttime">Click here to change the time!</string>
    <string name="add_employee_title">Add A New Employee</string>
    <string name="supplyremove_button">Remove Supply</string>
    <string name="equipmentremove_button">Remove Equipment</string>
    <string name="ordermenutitle">Orders</string>
    <string name="orderbutton">Order</string>
</resources>
