<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.ftmsmobile.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/linearLayout">
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:id="@+id/newitem_name"
                android:hint="@string/newitemname_hint"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/newitem_price"
                android:hint="@string/newitemprice_hint"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newitem_button"
                android:layout_gravity="end"
                android:onClick="addItem"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="Menu"
                android:textColor="#000000"
                android:enabled="false"/>
            <EditText
                android:textColor="#000000"
                android:id="@+id/menu_display"
                android:scrollbars="vertical"
                android:enabled="false"
                android:hint="No items entered !"
                android:layout_height="fill_parent"
                android:layout_width="fill_parent"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/holo_blue_dark"/>
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="Inventory"
                android:textColor="#000000"
                android:enabled="false"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:id="@+id/newsupply_name"
                android:hint="@string/newsupply_hint"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/newsupply_count"
                android:hint="@string/newsupplycount_hint"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newsupply_button"
                android:layout_gravity="end"
                android:onClick="addSupply"/>
            <EditText
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:id="@+id/newequipment_name"
                android:hint="@string/newequipment_hint"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/newequipment_count"
                android:hint="@string/newsequimpentcount_hint"/>
            <Button
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/newequipment_button"
                android:layout_gravity="end"
                android:onClick="addEquipment"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/holo_blue_dark"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
